--- a/package.json
+++ b/package.json
@@ -10,13 +10,27 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@hookform/resolvers": "^2.9.0",
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
+    "framer-motion": "^6.3.10",
     "next": "12.1.0",
+    "next-auth": "^4.3.4",
     "rc-table": "^7.23.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dynamic-carousel": "^1.0.7",
+    "react-hook-form": "^7.31.3",
     "react-js-pagination": "^3.0.3",
+    "react-loading-skeleton": "^3.1.0",
+    "react-owl-carousel": "^2.3.3",
     "react-pure-modal": "^2.1.0",
-    "react-transition-group": "^4.4.2"
+    "react-reveal": "^1.2.2",
+    "react-spring": "^9.4.5",
+    "react-transition-group": "^4.4.2",
+    "styled-components": "^5.3.5",
+    "swr": "^1.3.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
