--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-auth": "^4.3.4",
     "rc-table": "^7.23.0",
     "react": "17.0.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
     "react-dynamic-carousel": "^1.0.7",
     "react-hook-form": "^7.31.3",
