--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "postcss": "^8.4.8",
-    "tailwindcss": "^3.0.23"
+    "postcss-cli": "^9.1.0",
+    "tailwindcss": "^3.0.24"
   }
 }
