--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-dom": "17.0.2",
     "react-dynamic-carousel": "^1.0.7",
     "react-hook-form": "^7.31.3",
-    "react-js-pagination": "^3.0.3",
+    "react-icons": "^4.4.0",
+    "react-js-pagination": "^3.0.2",
     "react-loading-skeleton": "^3.1.0",
     "react-owl-carousel": "^2.3.3",
     "react-pure-modal": "^2.1.1",
+    "react-query": "^3.39.1",
     "react-reveal": "^1.2.2",
     "react-spring": "^9.4.5",
     "react-transition-group": "^4.4.2",
