--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-loading-skeleton": "^3.1.0",
     "react-owl-carousel": "^2.3.3",
     "react-pure-modal": "^2.1.1",
+    "react-query": "^3.39.1",
     "react-reveal": "^1.2.2",
     "react-spring": "^9.4.5",
     "react-transition-group": "^4.4.2",
