--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
     "@mui/styled-engine-sc": "^5.8.0",
+    "@next/bundle-analyzer": "^12.1.6",
     "axios": "^0.27.2",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "framer-motion": "^6.3.10",
     "material-react-table": "^0.13.1",
