--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "backend_admin_by_react",
+  "proxy": "http://localhost:3000/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
