--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.31.3",
     "react-icons": "^4.4.0",
     "react-js-pagination": "^3.0.2",
+    "react-multi-date-picker": "^3.3.0",
     "react-pure-modal": "^2.1.1",
     "react-query": "^3.39.1",
     "react-transition-group": "^4.4.2",
