--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-multi-date-picker": "^3.3.0",
     "react-pure-modal": "^2.1.1",
     "react-query": "^3.39.1",
+    "react-toastify": "^4.1.0",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0",
