--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "axios": "^0.27.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
+    "export-to-csv": "^0.2.1",
     "framer-motion": "^6.3.10",
     "material-react-table": "^0.13.1",
     "next": "12.1.0",
     "next-auth": "^4.3.4",
     "rc-table": "^7.24.2",
     "react": "17.0.2",
+    "react-csv": "^2.2.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.31.3",
@@ -36,6 +38,7 @@
     "react-multi-date-picker": "^3.3.0",
     "react-pure-modal": "^2.1.1",
     "react-query": "^3.39.1",
+    "react-to-pdf": "^0.0.14",
     "react-toastify": "^4.1.0",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.5",
